--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   },
   "dependencies": {
     "expo": "~36.0.0",
+    "expo-location": "~8.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-google-places-autocomplete": "^1.4.0",
     "react-native-maps": "0.26.1",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "styled-components": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
